--- a/templates/main.html
+++ b/templates/main.html
@@ -6,8 +6,8 @@
    <body>
       <h1>Hello, World!</h1>
       <h2>The date and time on the server is: {{ time }}</h2>
-      <h3>Color : white </h3>
-      <h4>Dimness : 50 </h4>
+      <h3>Color : {{ color }} </h3>
+      <h4>Dimness : {{ dimness }} </h4>
 
    </body>
 </html>
