--- a/templates/main.html
+++ b/templates/main.html
@@ -4,10 +4,11 @@
    </head>
 
    <body>
-      <h1>Hello, World!</h1>
+      <h1>Team 20 Net Apps Assignment 3 My API</h1>
       <h2>The date and time on the server is: {{ time }}</h2>
-      <h3>Color : {{ color }} </h3>
-      <h4>Dimness : {{ dimness }} </h4>
+      <h2>Color : {{ color }} </h2>
+      <h2>LED : {{ led }} </h2>
+      <h2>Dimness : {{ dimness }} </h2>
 
    </body>
 </html>
